# api-mellitus

./: .gitignore  Dockerfile  DockerfileLocal  Procfile  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  questions  render.yaml  requirements.txt
accounts/: apps.py  forms.py  models.py  serializers.py  urls.py  views.py  viewsets.py
accounts/fixtures/: treatments.json
accounts/migrations/: 0001_initial.py  0002_remove_user_diabete_user_diabetes_and_more.py  0003_user_altura.py
accounts/templates/accounts/users/: create.html  edit.html
glycemia/: models.py  serializers.py  urls.py  views.py
glycemia/migrations/: 0001_initial.py
home/: api.py  models.py  serializers.py  views.py
home/migrations/: 0003_category_postpage.py  0004_postpage_subtitle.py  0005_postpage_cover.py  0006_postpage_url_video.py
instruments/: models.py  serializers.py  urls.py  views.py
instruments/migrations/: 0001_initial.py  0002_alter_answer_options_remove_form_text_form_title_and_more.py  0003_form_description_alter_question_text.py  0004_alter_answersheet_form.py  0005_alter_choice_options_form_type_form.py  0006_alter_form_type_form.py  0007_question_category_question_type.py
medications/: models.py  serializers.py  urls.py  views.py
medications/migrations/: 0001_initial.py
mellitus/: settings.py  urls.py  wsgi.py
mellitus/templates/: base.html
todo/: models.py  serializers.py  views.py
todo/migrations/: 0001_initial.py  0002_alter_task_options_alter_task_status.py
